--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,6 @@
     <script src="./serviceWorker.js"defer></script>
 </head>
 <body>
-    <h1>Dage til Juleaften</h1>
-    <div id="countdown"></div>
+    <h1>Siden kunne ikke findes</h1>
 </body>
 </html>
